feat: adding openapi spect generation to the frontend client aas well as to fast api.  Broke API out into different routes
