# mta-sign-ui/gen-sources/mta-sign-api/models/AllStationModel.ts
@@ -1,73 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * FastAPI
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 0.1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-import type { StationResponse } from './StationResponse';
-import {
-    StationResponseFromJSON,
-    StationResponseFromJSONTyped,
-    StationResponseToJSON,
-} from './StationResponse';
-
-/**
- * 
- * @export
- * @interface AllStationModel
- */
-export interface AllStationModel {
-    /**
-     * 
-     * @type {{ [key: string]: StationResponse; }}
-     * @memberof AllStationModel
-     */
-    stations: { [key: string]: StationResponse; } | null;
-}
-
-/**
- * Check if a given object implements the AllStationModel interface.
- */
-export function instanceOfAllStationModel(value: object): boolean {
-    let isInstance = true;
-    isInstance = isInstance && "stations" in value;
-
-    return isInstance;
-}
-
-export function AllStationModelFromJSON(json: any): AllStationModel {
-    return AllStationModelFromJSONTyped(json, false);
-}
-
-export function AllStationModelFromJSONTyped(json: any, ignoreDiscriminator: boolean): AllStationModel {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'stations': { [key: string]: StationResponse; }FromJSON(json['stations']),
-    };
-}
-
-export function AllStationModelToJSON(value?: AllStationModel | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'stations': { [key: string]: StationResponse; }ToJSON(value.stations),
-    };
-}
-
