# mta-sign-ui/gen-sources/mta-sign-api/models/RouteResponse.ts
@@ -1,66 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * FastAPI
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 0.1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface RouteResponse
- */
-export interface RouteResponse {
-    /**
-     * 
-     * @type {any}
-     * @memberof RouteResponse
-     */
-    arrivalTimes: any | null;
-}
-
-/**
- * Check if a given object implements the RouteResponse interface.
- */
-export function instanceOfRouteResponse(value: object): boolean {
-    let isInstance = true;
-    isInstance = isInstance && "arrivalTimes" in value;
-
-    return isInstance;
-}
-
-export function RouteResponseFromJSON(json: any): RouteResponse {
-    return RouteResponseFromJSONTyped(json, false);
-}
-
-export function RouteResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): RouteResponse {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'arrivalTimes': json['arrival_times'],
-    };
-}
-
-export function RouteResponseToJSON(value?: RouteResponse | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'arrival_times': value.arrivalTimes,
-    };
-}
-
