# mta-sign-ui/gen-sources/mta-sign-api/models/StationResponse.ts
@@ -1,73 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * FastAPI
- * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
- *
- * The version of the OpenAPI document: 0.1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { exists, mapValues } from '../runtime';
-import type { RouteResponse } from './RouteResponse';
-import {
-    RouteResponseFromJSON,
-    RouteResponseFromJSONTyped,
-    RouteResponseToJSON,
-} from './RouteResponse';
-
-/**
- * 
- * @export
- * @interface StationResponse
- */
-export interface StationResponse {
-    /**
-     * 
-     * @type {{ [key: string]: RouteResponse; }}
-     * @memberof StationResponse
-     */
-    routes: { [key: string]: RouteResponse; } | null;
-}
-
-/**
- * Check if a given object implements the StationResponse interface.
- */
-export function instanceOfStationResponse(value: object): boolean {
-    let isInstance = true;
-    isInstance = isInstance && "routes" in value;
-
-    return isInstance;
-}
-
-export function StationResponseFromJSON(json: any): StationResponse {
-    return StationResponseFromJSONTyped(json, false);
-}
-
-export function StationResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): StationResponse {
-    if ((json === undefined) || (json === null)) {
-        return json;
-    }
-    return {
-        
-        'routes': { [key: string]: RouteResponse; }FromJSON(json['routes']),
-    };
-}
-
-export function StationResponseToJSON(value?: StationResponse | null): any {
-    if (value === undefined) {
-        return undefined;
-    }
-    if (value === null) {
-        return null;
-    }
-    return {
-        
-        'routes': { [key: string]: RouteResponse; }ToJSON(value.routes),
-    };
-}
-
