# mta-sign-ui/gen-sources/mta-sign-api/models/index.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export * from './AllStationModel';
-export * from './HTTPValidationError';
-export * from './Route';
-export * from './RouteResponse';
-export * from './StationResponse';
-export * from './ValidationError';
